--- a/ml_project_app/mainwindow.ui
+++ b/ml_project_app/mainwindow.ui
@@ -211,6 +211,8 @@
    <addaction name="actionHand"/>
    <addaction name="actionScribble"/>
    <addaction name="actionErase"/>
+   <addaction name="separator"/>
+   <addaction name="actionSaveSimilarityMap"/>
   </widget>
   <action name="actionOpenImage">
    <property name="text">
@@ -254,6 +256,11 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+H</string>
+   </property>
+  </action>
+  <action name="actionSaveSimilarityMap">
+   <property name="text">
+    <string>Save similarity map</string>
    </property>
   </action>
  </widget>
