--- a/ml_project_app/configdialog.ui
+++ b/ml_project_app/configdialog.ui
@@ -28,14 +28,14 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label_1">
        <property name="text">
-        <string>&amp;Neighborhood size</string>
+        <string>Neighborhood size</string>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>&amp;Stopping Epsilon</string>
+        <string>Stopping Epsilon</string>
        </property>
       </widget>
      </item>
