--- a/ml_project_app/configdialog.ui
+++ b/ml_project_app/configdialog.ui
@@ -55,6 +55,16 @@
      <item row="1" column="1">
       <widget class="QLineEdit" name="stoppingEpsilon"/>
      </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Lambda</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="lambda"/>
+     </item>
     </layout>
    </item>
    <item>
