--- a/ml_project_app/mainwindow.ui
+++ b/ml_project_app/mainwindow.ui
@@ -226,7 +226,7 @@
            <number>2</number>
           </property>
           <attribute name="horizontalHeaderVisible">
-           <bool>true</bool>
+           <bool>false</bool>
           </attribute>
           <attribute name="horizontalHeaderHighlightSections">
            <bool>true</bool>
@@ -253,6 +253,13 @@
             <string>Message</string>
            </property>
           </column>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="copyLogToClipboard">
+          <property name="text">
+           <string>Copy to clipboard</string>
+          </property>
          </widget>
         </item>
        </layout>
